<resources>
    <string name="app_name">规培考勤管理系统</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="homepager">首页</string>
    <string name="addressbook">通讯录</string>
    <string name="personal">个人</string>
    <string name="personalication">个人中心</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="phonenum">手机号码</string>
    <string name="yanzheng">验证码</string>
    <string name="submit">提交</string>
    <string name="getyacode">获取验证码</string>
    <string name="yanzhengphone">验证手机号</string>
    <string name="personal_info">个人信息</string>
    <string name="mypaiban">我的排班</string>
    <string name="myxinzi">我的工资</string>
    <string name="myshoucang">我的收藏</string>
    <string name="my_setting">密码设置</string>
    <string name="search">搜索科室、员工、拼音缩写或电话号码</string>
    <string name="person">员工</string>
    <string name="office">科室</string>
    <string name="now">返回本周</string>
    <string name="office_schedule">科室排班</string>
    <string name="class_type">班次类型</string>
    <string name="query">查询</string>
    <string name="copy_lastweek">复制上周</string>
    <string name="one">一</string>
    <string name="two">二</string>
    <string name="three">三</string>
    <string name="fore">四</string>
    <string name="five">五</string>
    <string name="six">六</string>
    <string name="seven">日</string>
    <!--星期-->
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
    <string name="date">日期</string>
    <string name="lastweek">上周</string>
    <string name="nextweek">下周</string>
    <string name="mynews">我的消息</string>
    <string name="myleave">我的请假</string>
    <string name="mystudent">我的学员</string>
    <string name="setting_usericon">设置个人头像</string>
    <string name="selectfrom">从相册选一张</string>
    <string name="camera">拍一张</string>
    <string name="use_date">按日期</string>
    <string name="use_name">按姓名</string>
    <string name="schedule_fixed">固定排班</string>
    <string name="schedule_cricle">周期排班</string>
    <string name="add">添加</string>
    <string name="other">填写备注信息</string>
    <string name="totle_schedule">总值班</string>
    <string name="schedule_note">值班记录</string>
    <string name="schedule_xunjian">值班巡检</string>
    <string name="schedule_jiaojie">值班交接</string>
    <string name="first_notify">紧急通知</string>
    <string name="totle_info">统计信息</string>
    <string name="about_time">发生时间</string>
    <string name="request_time">请求时间</string>
    <string name="select_class">分类选择</string>
    <string name="chengdu">紧急程度</string>
    <string name="shuxing">状态属性</string>
    <string name="other_select">其他分类</string>
    <string name="descrition">描述</string>
    <string name="more">更多分类选择</string>
    <string name="less">收回</string>
    <string name="schedule_otherclass">分类选择</string>
    <string name="searchclass">搜索分类</string>
    <string name="other_class">其他分类</string>
    <string name="enable">确定</string>
    <string name="commondesc">常用语选择</string>
    <string name="searchcommondesc">搜索关键字</string>
    <string name="zhaiyao">摘要</string>
    <string name="pinyin">拼音</string>
    <string name="content">内容</string>
    <string name="commondesc_type">常用语类型</string>
    <string name="total_office">总值班科室</string>
    <string name="chakan">查看详细信息</string>
    <string name="yuanqu">院区</string>
    <string name="xunjian_time">巡检时间</string>
    <string name="xinjianperson">巡检参与人</string>
    <string name="xunjianschedule">巡检科室</string>
    <string name="xunjian_content">巡检内容</string>
    <string name="problem_office">问题科室</string>
    <string name="problem_content">问题内容</string>
    <string name="descration">描述</string>
    <string name="post_image">上传图片</string>
    <string name="xunjian_person">巡检参与人</string>
    <string name="searchname">搜索姓名</string>
    <string name="nowscheduleperson">当前值班人员</string>
    <string name="otherscheduleperson">其他值班人员</string>
    <string name="search0">搜索</string>
    <string name="commonoffice">常用巡检科室</string>
    <string name="otheroffice">其他巡检科室</string>
    <string name="commoncontent">常用巡检内容</string>
    <string name="othercontent">其他巡检内容</string>
    <string name="xunjian_office">巡检科室</string>
    <string name="camerafile">相机</string>
    <string name="localfile">本地图片</string>
    <string name="create_time">创建时间：</string>
    <string name="descrations">描述：</string>
    <string name="xunjian_times">巡检时间：</string>
    <string name="jiaoban_note">交班记录</string>
    <string name="jiaoban_person">交班人</string>
    <string name="jioaban_time">交班时间</string>
    <string name="jioaban_zhuangt">交班状态</string>
    <string name="schedule">科室</string>
    <string name="jioaban_person">交班人</string>
    <string name="jieban_person">接班人</string>
    <string name="jiaojie_total">交接汇总</string>
    <string name="backup_info">填写备注信息</string>
    <string name="complete">完成</string>
    <string name="update_password">密码修改</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="my_holiday">我的请假</string>
    <string name="start_date">开始日期</string>
    <string name="end_date">结束日期</string>
    <string name="select_look_style">选择查看方式</string>
    <string name="benpaiban">本科室排班</string>
    <string name="benpaiban_today">本科室当日排班</string>
    <string name="otherpaiban">其他科室排班</string>
    <string name="mypmanager">我管理的科室排班</string>
    <string name="today">今天</string>
    <string name="my_student">我的学员</string>
    <string name="name">姓名</string>
    <string name="department">科室</string>
    <string name="worknum">工号</string>
    <string name="tel_phonenum">电话</string>
    <string name="student_schedule">学员排班</string>
    <string name="detail_info">详细信息</string>
    <string name="look">查看</string>
    <string name="grade">年级</string>
    <string name="exit">退出当前帐号</string>
    <string name="edit_schedule_note">编辑值班记录</string>
</resources>
