<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/jiaoban_person"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:drawableRight="@mipmap/down"
        android:paddingRight="10dp"
        android:background="@color/white"
        android:textSize="14sp"
        android:hint="@string/jiaoban_person"/>
    <TextView
        android:id="@+id/jiaoban_time"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:drawableRight="@mipmap/down"
        android:paddingRight="10dp"
        android:background="@color/white"
        android:text="@string/jioaban_time"/>
    <TextView
        android:id="@+id/jiaoban_zhuangt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:drawableRight="@mipmap/down"
        android:paddingRight="10dp"
        android:background="@color/white"
        android:text="@string/jioaban_zhuangt"/>
    <Button
        android:id="@+id/query"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_margin="15dp"
        android:background="@drawable/login_button_shape"
        android:text="@string/query"/>
</LinearLayout>