<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/departmenttype"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:gravity="center">
        <TextView
            android:id="@+id/departmenttext"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/department"
            android:gravity="center"
            android:drawablePadding="15dp"
            android:drawableRight="@mipmap/xia"
            android:background="@android:color/transparent"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/gradeselect"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:gravity="center">
        <TextView
            android:id="@+id/gradetext"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/grade"
            android:gravity="center"
            android:drawablePadding="15dp"
            android:drawableRight="@mipmap/xia"
            android:background="@android:color/transparent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:gravity="center">
        <Button
            android:id="@+id/querydata"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@mipmap/confirm"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black01"
            android:text="@string/query"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/name"
            android:gravity="center"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/black1"/>
        <TextView
            android:id="@+id/depatment_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/department"
            android:gravity="center"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/black1"/>
        <TextView
            android:id="@+id/work_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/worknum"
            android:gravity="center"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/black1"/>
        <TextView
            android:id="@+id/telephone_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tel_phonenum"
            android:gravity="center"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/black1"/>
        <TextView
            android:id="@+id/student_schedule"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/student_schedule"
            android:gravity="center"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/black1"/>
        <TextView
            android:id="@+id/detail_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/detail_info"
            android:gravity="center"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black1"/>
</LinearLayout>