<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_total_schedule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    android:orientation="vertical"
    tools:context="iok.la.com.medicaltreatmentapplication.activities.TotalScheduleActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/titlebar_background"
        android:gravity="center">
        <ImageButton
            android:id="@+id/turn_last"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:src="@mipmap/zuob"
            />
        <TextView
            android:id="@+id/title"
            style="@style/Title_Style"
            android:text="@string/totle_schedule"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/histogramx"
        android:scaleType="fitXY"/>
    <RelativeLayout
        android:id="@+id/schedule_note"
        style="@style/Personal_Setting"
        android:layout_marginTop="30dp"
        >
        <TextView
            style="@style/Personal_Setting_Text"
            android:text="@string/schedule_note"
            android:drawableLeft="@mipmap/time"/>
        <ImageView
            style="@style/Personal_Setting_Image"
            android:src="@mipmap/enter"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/schedule_xunjian"
        style="@style/Personal_Setting"
        android:layout_marginTop="20dp"
        >
        <TextView
            style="@style/Personal_Setting_Text"
            android:text="@string/schedule_xunjian"
            android:drawableLeft="@mipmap/onsite"/>
        <ImageView
            style="@style/Personal_Setting_Image"
            android:src="@mipmap/enter"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/schedule_jiaojie"
        style="@style/Personal_Setting"
        android:layout_marginTop="10dp"
        >
        <TextView
            style="@style/Personal_Setting_Text"
            android:text="@string/schedule_jiaojie"
            android:drawableLeft="@mipmap/onduty0"/>
        <ImageView
            style="@style/Personal_Setting_Image"
            android:src="@mipmap/enter"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/first_notify"
        style="@style/Personal_Setting"
        android:layout_marginTop="10dp"
        >
        <TextView
            style="@style/Personal_Setting_Text"
            android:text="@string/first_notify"
            android:drawableLeft="@mipmap/notice"/>
        <ImageView
            style="@style/Personal_Setting_Image"
            android:src="@mipmap/enter"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/totle_info"
        style="@style/Personal_Setting"
        android:layout_marginTop="10dp"
        >
        <TextView
            style="@style/Personal_Setting_Text"
            android:text="@string/totle_info"
            android:drawableLeft="@mipmap/statist"/>
        <ImageView
            style="@style/Personal_Setting_Image"
            android:src="@mipmap/enter"/>
    </RelativeLayout>
</LinearLayout>
