<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:gravity="center_vertical"
    android:layout_height="wrap_content">
    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"/>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/black2"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="8dp"
        android:textStyle="bold"
        android:text="@string/zhaiyao"/>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/black2"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="8dp"
        android:textStyle="bold"
        android:text="@string/pinyin"/>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/black2"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="8dp"
        android:textStyle="bold"
        android:text="@string/content"/>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/black2"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="8dp"
        android:textStyle="bold"

        android:text="@string/commondesc_type"/>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/black2"/>


</LinearLayout>