<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bind_phone_num"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iok.la.com.medicaltreatmentapplication.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@mipmap/background"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/titlebar_background"
            android:gravity="center">
            <TextView
                android:id="@+id/title"
                style="@style/Title_Style"
                android:text="@string/yanzhengphone"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:src="@mipmap/logo"
                android:orientation="vertical"/>
        </RelativeLayout>
        <EditText
            android:id="@+id/phonenum"
            style="@style/User_Password_Background"
            android:drawableLeft="@mipmap/phone1"
            android:gravity="center_vertical"
            android:inputType="phone"
            android:hint="@string/phonenum"
            android:text="3456"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            >
            <EditText
                android:id="@+id/yzcode"
                style="@style/User_Password_Background"
                android:drawableLeft="@mipmap/lock1"
                android:text="3456"
                android:inputType="number"
                android:gravity="center_vertical"
                android:hint="@string/yanzheng"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:layout_alignParentRight="true">
                <TextView
                    android:id="@+id/getyzcode"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:background="@drawable/login_yanzheng_shape"
                    android:text="@string/getyacode"
                    android:textColor="@color/black1"
                    android:layout_marginRight="30dp"
                    />
            </LinearLayout>


        </RelativeLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            android:background="@drawable/login_button_background"
            android:layout_marginLeft="@dimen/btn_magin"
            android:layout_marginRight="@dimen/btn_magin"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:layout_height="40dp" />
    </LinearLayout>
</RelativeLayout>
    <!--activity_bind_phone_num-->
