<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/login_background"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="center"
                android:background="@mipmap/personal_top">
                <LinearLayout
                    android:id="@+id/update_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <cn.bingoogolapple.imageview.BGAImageView
                        android:id="@+id/icon"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:scaleType="fitXY"
                        android:background="@drawable/usericon_background"
                        android:src="@mipmap/wei"
                        app:bga_iv_isCircle="true"/>
                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/btn_magin"
                        android:textStyle="bold"
                        android:text="Alice"/>
                </LinearLayout>
            </RelativeLayout>
            <!--个人中心选项-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/drawablePad1"
                android:gravity="center_vertical"
                android:orientation="vertical">
                <RelativeLayout
                    android:id="@+id/user_info"
                    style="@style/Personal_Setting"
                    >
                    <TextView
                        style="@style/Personal_Setting_Text"
                        android:text="@string/personal_info"
                        android:drawableLeft="@mipmap/personal"/>
                    <ImageView
                       style="@style/Personal_Setting_Image"
                        android:src="@mipmap/enter"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/user_schedule"
                    style="@style/Personal_Setting"
                    android:layout_marginTop="10dp"
                    >
                    <TextView
                        style="@style/Personal_Setting_Text"
                        android:text="@string/mypaiban"
                        android:drawableLeft="@mipmap/schedule"/>
                    <ImageView
                        style="@style/Personal_Setting_Image"
                        android:src="@mipmap/enter"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/user_student"
                    style="@style/Personal_Setting"
                    android:layout_marginTop="10dp"
                    >
                    <TextView
                        style="@style/Personal_Setting_Text"
                        android:text="@string/mystudent"
                        android:drawableLeft="@mipmap/mystudent"/>
                    <ImageView
                        style="@style/Personal_Setting_Image"
                        android:src="@mipmap/enter"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/user_leave"
                    style="@style/Personal_Setting"
                    android:layout_marginTop="10dp"
                    >
                    <TextView
                        style="@style/Personal_Setting_Text"
                        android:text="@string/myleave"
                        android:drawableLeft="@mipmap/myleave"/>
                    <ImageView
                        style="@style/Personal_Setting_Image"
                        android:src="@mipmap/enter"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/user_news"
                    style="@style/Personal_Setting"
                    android:layout_marginTop="10dp"
                    >
                    <TextView
                        style="@style/Personal_Setting_Text"
                        android:text="@string/mynews"
                        android:drawableLeft="@mipmap/mynews"/>
                    <ImageView
                        style="@style/Personal_Setting_Image"
                        android:src="@mipmap/enter"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/user_collect"
                    style="@style/Personal_Setting"
                    android:layout_marginTop="10dp"
                    >
                    <TextView
                        style="@style/Personal_Setting_Text"
                        android:text="@string/myshoucang"
                        android:drawableLeft="@mipmap/collect"/>
                    <ImageView
                        style="@style/Personal_Setting_Image"
                        android:src="@mipmap/enter"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/user_wages"
                    style="@style/Personal_Setting"
                    android:layout_marginTop="10dp"
                    >
                    <TextView
                        style="@style/Personal_Setting_Text"
                        android:text="@string/myxinzi"
                        android:drawableLeft="@mipmap/wages"/>
                    <ImageView
                        style="@style/Personal_Setting_Image"
                        android:src="@mipmap/enter"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/user_setting"
                    style="@style/Personal_Setting"
                    android:layout_marginTop="25dp"
                    >
                    <TextView
                        style="@style/Personal_Setting_Text"
                        android:text="@string/my_setting"
                        android:drawableLeft="@mipmap/setup"/>
                    <ImageView
                        style="@style/Personal_Setting_Image"
                        android:src="@mipmap/enter"/>
                </RelativeLayout>

            </LinearLayout>
            <Button
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:background="@drawable/exit_button_background"
                android:layout_marginLeft="@dimen/btn_magin"
                android:layout_marginRight="@dimen/btn_magin"
                android:text="@string/exit"
                android:textColor="@color/white"
                android:layout_height="40dp" />
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>